# machine-api-operator

./: .gitignore  .golangci.yaml  .gometalinter.json  .snyk  .travis.yml  AGENTS.md  BUILD.bazel  Dockerfile  Dockerfile.rhel  Dockerfile.rhel7  FAQ.md  Gopkg.toml  HACKING.md  Makefile  OWNERS  OWNERS_ALIASES  PROJECT  README.md  WORKSPACE  glide.yaml  go.mod  go.sum  go.work  go.work.sum  kustomization.yaml  tools.go
cmd/: BUILD.bazel  Dockerfile  main.go  start.go
cmd/common/: client_builder.go  controller_context.go  helpers.go
cmd/cpmachinehooks/: main.go
cmd/machine-api-operator/: client_builder.go  controller_context.go  helpers.go  main.go  start.go  version.go
cmd/machine-api-tests-ext/: main.go  provider.go
cmd/machine-healthcheck/: main.go
cmd/machineset/: main.go
cmd/nodelink-controller/: controller_test.go  main.go
cmd/vsphere/: main.go
config/: 0000_05_config-operator_01_featuregate.crd.yaml  cluster-reader-rbac.yaml  kubemark-config-infra.yaml  kubemark.yaml  machine-api-operator-deployment.yaml  machine-api-operator-patch.yaml  prometheusrule.crd.yaml  servicemonitor.crd.yaml
docs/: README.md  intro.md
docusaurus/: Dockerfile  README.md
examples/: app-version-mao.yaml  cluster-test.yaml  clusterapi-apiserver-secret.yaml  machine-api-operator-config-aws.yaml  machine-api-operator-config-libvirt.yaml  machine-api-operator-config.yaml  machine-set-test.yaml  machine-test.yaml
hack/: ci-test.sh  crds-sync.sh  e2e.sh  fetch_ext_bins.sh  gen-crd.sh  generate-groups.sh  go-build.sh  go-fmt.sh  go-gen.sh  go-lint.sh  go-mod.sh  go-vet.sh  goimports.sh  gosec.sh  push-updates.sh  update-codegen.sh  verify-codegen.sh  yaml-lint.sh
install/: 0000_30_machine-api-operator_00_credentials-request.yaml  0000_30_machine-api-operator_00_namespace.yaml  0000_30_machine-api-operator_00_namespace_cluster-api.yaml  0000_30_machine-api-operator_01_images.configmap.yaml  0000_30_machine-api-operator_01_trusted-ca-configmap.yaml  0000_30_machine-api-operator_02_machine.CustomNoUpgrade.crd.yaml  0000_30_machine-api-operator_02_machine.Default.crd.yaml  0000_30_machine-api-operator_02_machine.DevPreviewNoUpgrade.crd.yaml  0000_30_machine-api-operator_02_machine.TechPreviewNoUpgrade.crd.yaml  0000_30_machine-api-operator_02_machine.crd.yaml  0000_30_machine-api-operator_03_ipaddressclaims.crd.yaml  0000_30_machine-api-operator_03_ipaddresses.crd.yaml  0000_30_machine-api-operator_03_machineset.CustomNoUpgrade.crd.yaml  0000_30_machine-api-operator_03_machineset.Default.crd.yaml  0000_30_machine-api-operator_03_machineset.DevPreviewNoUpgrade.crd.yaml  0000_30_machine-api-operator_03_machineset.OKD.crd.yaml  0000_30_machine-api-operator_03_machineset.TechPreviewNoUpgrade.crd.yaml  0000_30_machine-api-operator_03_machineset.crd.yaml  0000_30_machine-api-operator_04_machinedeployment.crd.yaml  0000_30_machine-api-operator_04_metal3provisioning.crd.yaml  0000_30_machine-api-operator_05_cluster_cluster-api.crd.yaml  0000_30_machine-api-operator_07_machinehealthcheck.crd.yaml  0000_30_machine-api-operator_08_baremetalhost.crd.yaml  0000_30_machine-api-operator_08_machine_webhook_service.yaml  0000_30_machine-api-operator_08_machinedisruptionbudget.crd.yaml  0000_30_machine-api-operator_08_rbac.yaml  (+50 more)
lib/: doc.go
pkg/render/: BUILD.bazel  config.go  golden.go  machine-api-operator-config.yaml  machine-api.yaml  render.go  render_test.go
(+316 files in other folders)
