filegroup(
    name = "manifests",
    srcs = glob(["manifests/**"]),
    visibility = ["//visibility:public"],
)

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "manifests_tar",
    srcs = glob(["manifests/**"]),
    package_dir = "",
    strip_prefix = ".",
    visibility = ["//visibility:public"],
)
