load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:image.bzl", "container_image")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("//tools/docker:local_docker_push.bzl", "local_docker_push")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/coreos-inc/tectonic-operators/operator/machine-api/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//operator-client/pkg/client:go_default_library",
        "//operator-client/pkg/types:go_default_library",
        "//operator/machine-api/pkg/render:go_default_library",
        "//operator/machine-api/pkg/types:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//x-operator/pkg/types:go_default_library",
        "//x-operator/pkg/xoperator:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

container_image(
    name = "manifests",
    base = "//x-operator/cmd/xoperator:base",
    directory = "/",
    tars = ["//operator/machine-api:manifests_tar"],
)

go_image(
    name = "machine-api-operator",
    base = ":manifests",
    binary = ":cmd",
    visibility = ["//visibility:public"],
)

local_docker_push(
    name = "push_image",
    image = ":machine-api-operator",
    registry = "quay.io",
    repository = "coreos/machine-api-operator",
    stamp = True,
    tag = "{STABLE_GIT_VERSION}",
)

local_docker_push(
    name = "push_image_dev",
    image = ":machine-api-operator",
    registry = "quay.io",
    repository = "coreos/machine-api-operator-dev",
    stamp = True,
    tag = "{STABLE_GIT_VERSION}",
    tags = ["dev"],
)
