load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "golden.go",
        "render.go",
    ],
    importpath = "github.com/openshift/machine-api-operator/pkg/render",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/openshift/machine-api-operator/pkg/config:go_default_library",
        "//vendor/github.com/ghodss/yaml:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//x-operator/pkg/types:go_default_library",
        "//x-operator/pkg/xoperator:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["render_test.go"],
    data = [
        "//operator/machine-api:manifests",
        "//operator/machine-api/pkg/render:machineapiconfig",
    ],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/coreos/tectonic-config/config/v:go_default_library",
        "//x-operator/pkg/types:go_default_library",
    ],
)

filegroup(
    name = "machineapiconfig",
    srcs = ["machine-api.yaml"],
)
